dev_apps/home2/style/css/app.css
html {
  font-size: 10px;
}

html, body, .icons {
  height: 100%;
  padding: 0;
  margin: 0;
}

.icons {
  overflow-y: scroll;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  will-change: scroll-position;
}

.icon {
  position: absolute;
  transform-origin: 0 0;
  will-change: transform;
  display: inline-block;
  width: calc(100% / 3);
  height: 9rem;
  text-align: center;
  background: no-repeat center;
  background-size: 8rem;
  z-index: 3;
}

.icon .title {
  display: block;
  margin-top: 9rem;
  pointer-events: none;
  color: #fff;
  font-size: 1.2rem;
  text-shadow: 0 0 0.5rem rgba(0,0,0,0.5);
}

.divider {
  position: absolute;
  height: 0.2rem;
  margin: 2.3rem 25%;
  background: #fff;
  width: 50%;
  z-index: 2;
}

.divider:last-child {
  visibility: hidden;
}

.dragging .icon.active {
  z-index: 4;
}

.dragging .divider,
.dragging .icon:not(.active) {
  transition: transform 0.35s;
}

.edit-mode .divider:last-child {
  visibility: visible;
}

.icon .remove {
  display: none;
}

.edit-mode .icon .remove {
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.5rem;
  width: 2.6rem;
  height: 2.6rem;
  background: url(/style/images/remove.png) no-repeat;
}

#confirmation-message.fade-in {
  position: fixed;
}

